--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/morgan": "^1.9.1",
     "@types/mssql": "^6.0.3",
     "@types/mysql": "^2.15.15",
+    "db-migrate": "^0.11.11",
+    "db-migrate-mysql": "^2.1.1",
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
